fixed layout bugs

--- a/style/style.scss
+++ b/style/style.scss
@@ -806,87 +806,4 @@ $minwidth: 320px;
     }
   }
 }
-
-/* .footer {
-  background: linear-gradient(
-    270deg,
-    #dcdcdc -1.59%,
-    #ffffff 50%,
-    #dcdcdc 100%
-  );
-  padding: 104px 0px 102px 0px;
-  &__row {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
-
-  &__rights {
-  }
-
-  &__social {
-  }
-
-  &__list {
-  }
-
-  &__adress {
-  }
-}
-.social {
-  &__list {
-    display: flex;
-  }
-
-  &__link {
-  }
-} */
 //< END FOOTER >=================================================================
-
-// burger of one spans
-/* 
-.icon-menu {
-  display: none;
-  @media (max-width: 767px) {
-    display: block;
-    position: absolute;
-    top: 0px;
-    right: 25px;
-    width: 30px;
-    height: 18px;
-    cursor: pointer;
-    margin: 25px 0px 0px 0px;
-    z-index: 5;
-    span {
-      top: 8px;
-      left: 0;
-      position: absolute;
-      width: 100%;
-      height: 2px;
-      background-color: $dark;
-      transition: all 0.3s ease 0s;
-      &:first-child {
-        top: 0px;
-      }
-      &:last-child {
-        top: auto;
-        bottom: 0px;
-      }
-    }
-    &.active {
-      span {
-        background-color: #fff;
-        transform: scale(0);
-        &:first-child {
-          transform: rotate(-45deg);
-          top: 8px;
-        }
-        &:last-child {
-          transform: rotate(45deg);
-          bottom: 8px;
-        }
-      }
-    }
-  }
-}  
-*/
